@@ -1,10 +1,12 @@
 package com.greymagic27;
 
+import com.destroystokyo.paper.profile.PlayerProfile;
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
@@ -12,6 +14,9 @@ import java.util.UUID;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.meta.SkullMeta;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 public class HeadManager {
 
@@ -21,9 +26,9 @@ public class HeadManager {
      *
      * @param playerUUID The player's UUID for the head we want
      * @param callback   Optionally add a callback for post-async task
-     * @return ItemStack with the player's skull as material, null if version is
+     * @return ItemStack with the player's skull as material
      */
-    static ItemStack GetPlayerHead(UUID playerUUID, CallbackAddXrayerHeadToCache callback) {
+    static @NotNull ItemStack GetPlayerHead(UUID playerUUID, CallbackAddXrayerHeadToCache callback) {
         String playerName = Bukkit.getOfflinePlayer(playerUUID).getName();
 
         String value;
@@ -40,18 +45,21 @@ public class HeadManager {
     /**
      * Gets a head by UUID
      */
-    static ItemStack GetHead(String value) {
+    static @NotNull ItemStack GetHead(String value) {
         ItemStack skull = new ItemStack(Material.PLAYER_HEAD);
-        UUID hashAsId = new UUID(value.hashCode(), value.hashCode());
-        return Bukkit.getUnsafe().modifyItemStack(skull,
-                "{SkullOwner:{Id:\"" + hashAsId + "\",Properties:{textures:[{Value:\"" + value + "\"}]}}}"
-        );
+        SkullMeta skullMeta = (SkullMeta) skull.getItemMeta();
+        if (skullMeta == null) return skull;
+        UUID uuid = UUID.fromString(value);
+        PlayerProfile profile = Bukkit.createProfile(uuid);
+        skullMeta.setPlayerProfile(profile);
+        skull.setItemMeta(skullMeta);
+        return skull;
     }
 
     /**
      * Gets a head's internal code (long string with alphanumbers ending in =, which represents the head), as a string
      */
-    static String GetHeadValue(String name) {
+    static @Nullable String GetHeadValue(String name) {
         try {
             String result = GetURLContent("https://api.mojang.com/users/profiles/minecraft/" + name);
             Gson g = new Gson();
@@ -74,12 +82,14 @@ public class HeadManager {
     /**
      * Gets the contents of a web URL as a string
      */
-    private static String GetURLContent(String urlStr) {
+    private static @NotNull String GetURLContent(String urlStr) {
         URL url;
+        URI uri;
         BufferedReader in = null;
         StringBuilder sb = new StringBuilder();
         try {
-            url = new URL(urlStr);
+            uri = URI.create(urlStr);
+            url = uri.toURL();
             in = new BufferedReader(new InputStreamReader(url.openStream(), StandardCharsets.UTF_8));
             String str;
             while ((str = in.readLine()) != null) {
